html css upload

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h1>gyhudcfrc</h1>
-    <h2>ok</h2>
-    <h2>non</h2>
-    <span>1ere 2eme</span>
-    <h5>efrgth</h5>
+    <h1>tp ready</h1>
+    <span>Chadi Benoutman</span>
    
 </body>
 </html>
